--- a/listWatchApp/Base.lproj/Main.storyboard
+++ b/listWatchApp/Base.lproj/Main.storyboard
@@ -135,7 +135,7 @@
         <!--Search-->
         <scene sceneID="Ofz-Pp-pth">
             <objects>
-                <viewController id="sTT-dC-rNP" customClass="searchViewController" customModule="listWatchApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="sTT-dC-rNP" customClass="aramaViewController" customModule="listWatchApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R0f-Pa-MNH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -166,13 +166,50 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="diq-yY-D9n"/>
                     <connections>
-                        <outlet property="searchBar" destination="aDj-5j-OVX" id="b13-hX-E58"/>
-                        <outlet property="tableView" destination="YXS-Lc-dJS" id="44D-WJ-dgU"/>
+                        <outlet property="searchBar" destination="aDj-5j-OVX" id="M8f-wY-1wF"/>
+                        <outlet property="tableView" destination="YXS-Lc-dJS" id="V1q-YM-gVT"/>
+                        <segue destination="nbz-kA-XTE" kind="show" identifier="toMovieVc" id="YQ4-qa-GWs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wiH-0X-2T1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3720.289855072464" y="-243.08035714285714"/>
+        </scene>
+        <!--Movie Info View Controller-->
+        <scene sceneID="p4f-gV-w3R">
+            <objects>
+                <viewController id="nbz-kA-XTE" customClass="movieInfoViewController" customModule="listWatchApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Nc2-C2-kaT">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vv4-Cv-hAL">
+                                <rect key="frame" x="0.0" y="84" width="414" height="225"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="d6a-FO-f0G">
+                                <rect key="frame" x="20" y="330" width="361" height="289"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jAr-bD-4oz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="77h-b0-15f">
+                        <barButtonItem key="backBarButtonItem" systemItem="cancel" id="fKa-q5-OYp"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="Vv4-Cv-hAL" id="G34-tG-Lit"/>
+                        <outlet property="infoTextView" destination="d6a-FO-f0G" id="job-lS-mKd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aEI-vA-b5e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4850.7246376811599" y="-242.41071428571428"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="4sQ-MR-vD8">
@@ -264,6 +301,9 @@
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
